--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "webpack-dev-server": "^4.9.3"
     },
     "dependencies": {
+        "@types/eslint": "^8.4.3",
         "fastify": "^4.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
